[gd_scene load_steps=3 format=2]

[ext_resource path="res://autoloads/Pause.gd" type="Script" id=1]
[ext_resource path="res://autoloads/black_square.png" type="Texture" id=2]

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="."]
margin_left = 121.0
margin_top = 68.0
margin_right = 199.0
margin_bottom = 88.0
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 121.0
margin_top = 93.817
margin_right = 199.0
margin_bottom = 113.817
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.0
margin_top = -48.0
margin_right = 39.0
margin_bottom = -28.0
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Fullscreen" to="." method="_on_Fullscreen_pressed"]
